--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
         <div class="container">
           <h1 class="promo__title">Monovision studio</h1>
           <h2 class="promo__subtitle">Want some style on your photos?</h2>
-          <a href="#portfolio" class="buttgiton">Portfolio</a>
+          <a href="#portfolio" class="button">Portfolio</a>
           <div class="promo__address">
             Location:
             <address>Everton Park, Block 2, Singapore 081002</address>
